syntax = "proto3";
package lbm.gov.migrations.v1;

import "lbm/base/v1/coin.proto";
import "lbm/gov/v1/gov.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option go_package                       = "github.com/line/lbm-sdk/x/gov/migrations/v1";
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all)         = false;
option (gogoproto.goproto_getters_all)  = false;

message ProposalV1 {
	option (gogoproto.equal) = true;

	uint64                    proposal_id        = 1 [(gogoproto.jsontag) = "id", (gogoproto.moretags) = "yaml:\"id\""];
	google.protobuf.Any       content            = 2 [(cosmos_proto.accepts_interface) = "Content"];
	lbm.gov.v1.ProposalStatus status             = 3 [(gogoproto.moretags) = "yaml:\"proposal_status\""];
	lbm.gov.v1.TallyResult    final_tally_result = 4
	[(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"final_tally_result\""];
	google.protobuf.Timestamp submit_time = 5
	[(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"submit_time\""];
	google.protobuf.Timestamp deposit_end_time = 6
	[(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"deposit_end_time\""];
	repeated lbm.base.v1.Coin total_deposit = 7 [
	                                            (gogoproto.nullable)     = false,
	                                            (gogoproto.castrepeated) = "github.com/line/lbm-sdk/types.Coins",
	                                            (gogoproto.moretags)     = "yaml:\"total_deposit\""
	                                            ];
	google.protobuf.Timestamp voting_start_time = 8
	[(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"voting_start_time\""];
	google.protobuf.Timestamp voting_end_time = 9
	[(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"voting_end_time\""];
}
